--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -1,3 +1,5 @@
+@import "./variables";
+
 html {
     box-sizing: border-box;
 }
@@ -11,4 +13,5 @@ html {
 html, body {
     margin: 0;
     padding: 0;
+    background: $background;
 }
