--- a/src/sass/_control-btns.scss
+++ b/src/sass/_control-btns.scss
@@ -9,7 +9,7 @@
     button {
         width: 100%;
         height: 4.5rem;
-        background: $btnBackground;
+        background: $secondBackground;
         border: .2px solid #000;
         text-transform: uppercase;
         padding: .8rem;
@@ -23,7 +23,7 @@
             content: "";
             width: 100%;
             height: 100%;
-            background: $btnBackground;
+            background: $secondBackground;
             position: absolute;
             top: -3px;
             right: 3px;
