--- a/src/sass/_control-btns.scss
+++ b/src/sass/_control-btns.scss
@@ -5,6 +5,7 @@
     display: flex;
     flex-direction: column;
     margin: 1rem auto;
+    margin-top: 2rem;
 
     button {
         width: 100%;
