--- a/src/sass/_control-btns.scss
+++ b/src/sass/_control-btns.scss
@@ -4,7 +4,7 @@
     width: 95%;
     display: flex;
     flex-direction: column;
-    margin: 1rem auto;
+    margin: 0 auto;
     margin-top: 2rem;
 
     button {
